force-app/main/default/objects/FSE_Sales__c/FSE_Sales__c.object-meta.xml
<CustomObject>
    <label>Hub Employee</label>
    <nameField>
        <displayFormat>FS-{000000}</displayFormat>
        <label>FSE &amp; Sales Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hub Employees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>