force-app/main/default/objects/FSE_Sales__c/fields/Delivery_Route__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Route</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Pickup_Delivery_Route__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Delivery</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Pickup_Delivery_Route__c</referenceTo>
    <relationshipName>FSE_Sales1</relationshipName>
    <type>Lookup</type>
</CustomField>