force-app/main/default/objects/FSE_Sales__c/fields/Delivery_Route_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Route_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Route Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FSE_Sales2</relationshipName>
    <type>Lookup</type>
</CustomField>