force-app/main/default/objects/FSE_Sales__c/fields/Hub__c.field-meta.xml
<CustomField>
    <fullName>Hub__c</fullName>
    <label>Hub</label>
    <referenceTo>Hub__c</referenceTo>
    <relationshipLabel>FSE &amp; Sales</relationshipLabel>
    <relationshipName>FSE_Sales</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>