force-app/main/default/objects/FSE_Sales__c/fields/Last_Assigne__c.field-meta.xml
<CustomField>
    <fullName>Last_Assigne__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Last Assigne</label>
    <type>Checkbox</type>
</CustomField>