force-app/main/default/objects/FSE_Sales__c/fields/Pickup_Route_Assign_To__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Route_Assign_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pickup Route Assign To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FSE_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>