force-app/main/default/objects/FSE_Sales__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Hub__c</columns>
    <columns>Type__c</columns>
    <columns>Sales_Person__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>